moved all css files to module files to seperate into namespaces and prevent name overlaps

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,8 +1,3 @@
-.maincontent {
-    float: left;
-    width: 70%;
-}
-
 .rightinfo {
     float: left;
     width: 10%;
