--- a/src/pages/Player/Player.module.css
+++ b/src/pages/Player/Player.module.css
@@ -8,17 +8,6 @@
     margin-left: 25px;
 }
 
-.likefield {
-    margin-top: 15px;
-    margin-left: 15px;
-    margin-right: 15px;
-    height: 30px;
-    background-color: #9e5353;
-    border-radius: 10px;
-    text-align: center;
-    color: white;
-}
-
 .videowrapper {
     margin-left: 20px;
     display: block;
